--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>complete responsive app landing page website design</title>
+    <title>complete responsive app landing page</title>
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
@@ -22,7 +22,7 @@
 
     <section class="flex">
 
-        <a href="#" class="logo">LOGO</a>
+        <a href="#" class="logo">Elevate</a>
 
         <div id="menu-bar" class="fas fa-bars"></div>
     
@@ -49,7 +49,7 @@
     <section>
 
     <div class="content">
-        <h3>app landing page</h3>
+        <h3>Elevate App </h3>
         <p>This section provides an overview of our innovative app, designed to enhance your productivity
              and streamline your daily tasks. Experience seamless functionality and intuitive design, 
              crafted to meet your needs. Our app stands out for its user-friendly interface and powerful 
