--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <section class="flex">
 
-        <a href="#" class="logo">Elevate</a>
+        <a href="#" class="logo">ELEVATE</a>
 
         <div id="menu-bar" class="fas fa-bars"></div>
     
@@ -49,7 +49,7 @@
     <section>
 
     <div class="content">
-        <h3>Elevate App </h3>
+        <h3>App Landing Page </h3>
         <p>This section provides an overview of our innovative app, designed to enhance your productivity
              and streamline your daily tasks. Experience seamless functionality and intuitive design, 
              crafted to meet your needs. Our app stands out for its user-friendly interface and powerful 
